--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,8 +17,11 @@ tauri-build = { version = "1.5.5", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.8.1", features = [] }
+tauri = { version = "1.8.1", features = [ "shell-all", "dialog-all", "fs-all"] }
 #libopenmpt-sys = "0.3.0"
+winreg = "0.52"
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.0", features = ["v4"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
